Fix action for strech template
'action' is not working on debian strech.

This change fixes it.

This change also remove the default configuration of all Debian setup,
not only Ubuntu 16.04.

--- a/templates/xenial/etc/fail2ban/jail.conf.erb
+++ b/templates/xenial/etc/fail2ban/jail.conf.erb
@@ -221,7 +221,7 @@ action = %(<%= scope['::fail2ban::action'] %>)s
 # SSH servers
 #
 
-[sshd]
+[ssh]
 
 enabled = <%= scope['::fail2ban::jails'].include? "ssh" %>
 port    = ssh
